#15680 closed bug (fixed)
Input preference: crash when clicking in list outside items
Reported by: | X512 | Owned by: | PreetpalKaur |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Preferences/Input | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Attachments (1)
Change History (4)
by , 5 years ago
Attachment: | Input-2694-debug-06-02-2020-16-21-32.report added |
---|
comment:1 by , 5 years ago
Description: | modified (diff) |
---|
comment:2 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:3 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
Note:
See TracTickets
for help on using tickets.
Fixed in hrev53838.