Input preferences: fix crash and add icon

Fixes #15680.